--- a/css/style.css
+++ b/css/style.css
@@ -1268,7 +1268,7 @@ textarea {
 
 
 
-/*pagina NZ - un realto conrto de una experiencia */
+/*pagina linea de tiempo de viaje */
 
 .fondo-nz {
     background-image: url(../img/foto85.jpg);
